--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <div class="container">
+  <p id="question">Is Kingsley Coman Injured ?</p>
   <h1 id="answer">???</h1>
-  <p id="complement">Kingsley Coman est-il actuellement blessé?</p>
+  <p id="complement">???????????</p>
 </div>
 <script src="scripts/script.js"></script>
 </body>
