--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div class="container">
   <p id="question">Is Kingsley Coman Injured ?</p>
-  <h1 id="answer"></h1>
-  <p id="complement"></p>
+  <h1 id="answer">???</h1>
+  <p id="complement">Just wait a little bit,<br/>We're checking it right now!</p>
 </div>
 <script src="scripts/script.js"></script>
 </body>
